--- a/app/views/categories.scala.html
+++ b/app/views/categories.scala.html
@@ -1,7 +1,7 @@
 @(categories: Seq[Category])
 
 @for(category <- categories) {
-    <b>@category.name</b>
+    <strong>@category.name</strong>
     @category.description
     <a href="@controllers.routes.CategoryController.updateCategory(category.id)">Edit</a>
     <a href="@controllers.routes.CategoryController.deleteCategory(category.id)">Delete</a>
