--- a/app/views/users.scala.html
+++ b/app/views/users.scala.html
@@ -1,7 +1,7 @@
 @(users: Seq[User])
 
 @for(user <- users) {
-    <b>@user.nick</b>
+    <strong>@user.nick</strong>
     @user.firstName
     @user.lastName
     @user.email
